--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
 
 <head>
     <link rel="stylesheet" href="{% static 'css/w3.css' %}" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     {% block head %}
 
     {% endblock %}
